Changed file GrasphConv.ipynb

--- a/GNN/GraphConv.ipynb
+++ b/GNN/GraphConv.ipynb
@@ -353,6 +353,64 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1120953b",
+   "metadata": {},
+   "source": [
+    "## Poblem 4\n",
+    "\n",
+    "We are interested in obtaining the index of the ith element whose value is the maximum in the tensor. Our loss function should aim to predict the maximum value for it. The next code is for understanding how the loss function work."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c646477",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "# Generate targets\n",
+    "y = torch.rand(5).abs()\n",
+    "true_idx = torch.argmax(y)\n",
+    "print(f'The maximum index at targets is {max_yidx}')\n",
+    "\n",
+    "# Predictions of model\n",
+    "x = y.clone()\n",
+    "x[max_yidx] = 0\n",
+    "max_xidx = torch.argmax(x)\n",
+    "print(f'Now the maximum index is: {max_xidx}')\n",
+    "\n",
+    "# prepare data\n",
+    "x_true = x[true_idx]\n",
+    "others = torch.cat([x[:true_idx], x[true_idx+1:]])\n",
+    "x1 = x_true.repeat(len(others))\n",
+    "x2 = others\n",
+    "target = torch.ones_like(x1)   # true score should be higher\n",
+    "loss = loss_fn(x1, x2, target)\n",
+    "print(\"loss:\", loss.item())\n",
+    "\n",
+    "# This it he loss function\n",
+    "loss_fn = nn.MarginRankingLoss()\n",
+    "target = y.sign()\n",
+    "loss = loss_fn(y, x, y.sign())\n",
+    "print(loss.item())\n",
+    "\n",
+    "x_true = x[true_idx]\n",
+    "others = torch.cat([x[:true_idx], x[true_idx+1:]])\n",
+    "\n",
+    "# Expand true score to match shape of others\n",
+    "x1 = x_true.repeat(len(others))\n",
+    "x2 = others\n",
+    "target = torch.ones_like(x1)   # true score should be higher\n",
+    "\n",
+    "loss = loss_fn(x1, x2, target)\n",
+    "print(\"loss:\", loss.item())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0b8b881b",
    "metadata": {},
    "source": [
